Afficher la région dans la fiche du chercheur.

--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -2,6 +2,7 @@
 
     <div><a href="mailto:{{ chercheur.personne.courriel }}">{{ chercheur.personne.courriel }}</a></div>
     <div>{{ chercheur.etablissement_display }}</div>
+    <div><span class="label">Région: </span>{{ chercheur.region.nom }}</div>
 
     <h5>Informations académiques</h5>
     <table>
