--- a/auf_savoirs_en_partage/templates/chercheurs/inscription.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/inscription.html
@@ -1,5 +1,10 @@
 {% extends "container_base.html" %}
 
+{% block extra-script %}
+<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.formset.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}js/chercheur_edit.js"></script>
+{% endblock %}
+
 {% block contenu %}
 <h4>Inscription au répertoire de chercheurs</h4>
 
