--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -24,7 +24,7 @@
     <table>
         {% form_field forms.chercheur.etablissement %}
     </table>
-    <p>Si l'établissement n'existe pas ci-dessus</p>
+    <p>Si l'établissement n'existe pas dans la liste des établissements membres de l'AUF, ci-dessus</p>
     <table>
         {% form_field forms.chercheur.etablissement_autre_nom %}
         {% form_field forms.chercheur.etablissement_autre_pays %}
