Utilisation de django_compressor pour versioner les js et css.

--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -1,20 +1,25 @@
+{% load compress %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>Savoirs en partage - Agence universitaire de la Francophonie</title>
         <link rel="icon" type="image/png" href="{{ MEDIA_URL }}img/favicon.ico" />
+        {% compress js %}
         <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery/jquery.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery/jquery-ui.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery/jquery.ui.datepicker-fr.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/tabber.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/pagination.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/sep.js"></script>
+        {% endcompress %}
         {% block extra-script %}{% endblock %}
 
+        {% compress css %}
         <link href="{{ MEDIA_URL }}css/global.css" rel="stylesheet" type="text/css" />
         <link href="{{ MEDIA_URL }}css/tabber.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="{{ MEDIA_URL }}js/jquery/css/smoothness/jquery-ui-1.8rc3.custom.css" type="text/css" media="all" />
+        {% endcompress %}
 
         <!--[if lt IE 7]>
         <link href="{{ MEDIA_URL }}css/ie6.css" rel="stylesheet" type="text/css" media="screen" />
