Afficher "oui" à côté du champ "Expert de l'OIF" sur la fiche du chercheur.

--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -84,7 +84,7 @@
         {% if chercheur.expert_oif %}
         <tr>
             <td class="label">Expert de l'OIF</td>
-            <td></td>
+            <td>oui</td>
         </tr>
         {% endif %}
         {% if chercheur.membre_fipf %}
