Changé les questions relatives aux activités en Francophonie

--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -50,8 +50,11 @@
         {% form_field forms.chercheur.membre_instance_auf %}
         {% form_field forms.chercheur.membre_instance_auf_dates %}
         {% form_field forms.chercheur.expert_oif %}
-        {% form_field forms.chercheur.membre_fipf %}
-        {% form_field forms.chercheur.membre_fipf_association %}
+        {% form_field forms.chercheur.membre_association_francophone %}
+        {% form_field forms.chercheur.membre_association_francophone_details %}
+        {% form_field forms.chercheur.membre_reseau_institutionnel %}
+        {% form_field forms.chercheur.membre_reseau_institutionnel_details %}
+        {% form_field forms.chercheur.membre_reseau_institutionnel_dates %}
     </table>
 </fieldset>
 
