--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -87,10 +87,17 @@
             <td>oui</td>
         </tr>
         {% endif %}
-        {% if chercheur.membre_fipf %}
+        {% if chercheur.membre_association_francophone %}
         <tr>
-            <td class="label">Membre de la FIPF</td>
-            <td>Nom de l'association: {{ chercheur.membre_fipf_association }}</td>
+            <td class="label">Membre d'une association ou d'une société savante francophone</td>
+            <td>{{ chercheur.membre_association_francophone_details }}</td>
+        </tr>
+        {% endif %}
+        {% if chercheur.membre_reseau_institutionnel %}
+        <tr>
+            <td class="label">Membre d'instances d'un réseau institutionnel de l'AUF</td>
+            <td>{{ chercheur.membre_reseau_institutionnel_details }}
+                {{ chercheur.membre_reseau_institutionnel_dates }}</td>
         </tr>
         {% endif %}
     </table>
