--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -19,11 +19,11 @@ LIGNES grises -> #e0e0e0 et #d5d5d5
 /* General */
 
 html {height:100%;}
-body { height:100%; font-size: 62.5%; /* <- 1em equivaut 10px */ line-height:1.4; color:#3a3125; background:#fff url(../img/background-body.jpg) repeat-y 50% 0; font-family: Verdana, Arial, Sans-Serif; text-align: center;}
+body { height:100%; font-size:62.5%; /* <- 1em equivaut 10px */ line-height:1.4; color:#3a3125; background:#fff url(../img/background-body.jpg) repeat-y 50% 0; font-family:Verdana, Arial, Sans-Serif; text-align:center;}
 a, a:active {text-decoration:underline;color:#97012c;}
 a:visited {color:#97012c;}
 a:hover {color:#97012c;}
-a img {border: none;}
+a img {border:none;}
 abbr, acronym {border-bottom:.1em dotted;cursor:help;}
 
 h1 {font-size:1em;margin:0 0 1em 0;}
@@ -39,26 +39,26 @@ p{margin:0 0 1em 0;}
 ul, ol{margin:0 0 1em 33px;list-style:none;}
 dt{margin:0.5em 0 0;}
 dd{margin:0.25em 0 0.5em 2.5em;}
-sup{font-size: smaller; vertical-align: 0.5em; line-height: 1px;}
+sup{font-size:smaller; vertical-align:0.5em; line-height:1px;}
 
-td ul { margin: 0 }
+td ul { margin:0 }
 
-form { padding-right:20px; margin: 1em 0; }
-form td { vertical-align: top }
-form th { width: 20em; text-align: left; font-weight: bold }
-form table { width: 100% }
-form input[type=text] { width: 20em }
-form input.date { width: auto }
-form select { width: 80%; overflow: hidden }
-form p { margin-bottom: 2px }
-fieldset { clear: both; padding: 10px; margin: 0 0 0 0; position: relative }
-fieldset { border-color: #000000; border-width: 1px 0 0 0; border-style: solid none none none; }
-fieldset { font-size: 100%; }
-fieldset fieldset { border: 1px solid #ccc; background: #fafafa; margin: 10px }
-legend { font-size: 150%; font-weight: bold; color: #000000; margin: 0 0 0 0; padding: 0 5px; }
+form { padding-right:20px; margin:1em 0; }
+form td { vertical-align:top }
+form th { width:20em; text-align:left; font-weight:bold }
+form table { width:100% }
+form input[type=text] { width:20em }
+form input.date { width:auto }
+form select { width:80%; overflow:hidden }
+form p { margin-bottom:2px }
+fieldset { clear:both; padding:10px; margin:0 0 0 0; position:relative }
+fieldset { border-color:#000000; border-width:1px 0 0 0; border-style:solid none none none; }
+fieldset { font-size:100%; }
+fieldset fieldset { border:1px solid #ccc; background:#fafafa; margin:10px }
+legend { font-size:150%; font-weight:bold; color:#000000; margin:0 0 0 0; padding:0 5px; }
 
 label {
-  font-size: 12px;
+  font-size:12px;
 }
 td, th
 {
@@ -67,11 +67,11 @@ vertical-align:middle;
 
 
 .box { padding:0 0 20px 0; }
-.lbl {color: #97012c; }
+.lbl {color:#97012c; }
 
 .centre { text-align:center }
 
-#fond {padding:0; margin:0; display:block; position:relative; width:100%; height:auto !important; height:100%; min-height:100%; background: url(../img/background-fond.jpg) no-repeat 50% 0; text-align:left;}
+#fond {padding:0; margin:0; display:block; position:relative; width:100%; height:auto !important; height:100%; min-height:100%; background:url(../img/background-fond.jpg) no-repeat 50% 0; text-align:left;}
 #enrobage {padding:0; margin:0 auto; display:block; position:relative; width:960px; height:auto !important; height:100%; min-height:100%;}
 
 div.sous-menu { display:inline; padding-top:1px; color:#fff; font-weight:bold; }
@@ -90,55 +90,56 @@ h5 a { text-decoration:none; }
 
 #sep-recherche {}
 h2.slogan { position:absolute; top:53px; left:240px; font-size:3.4em; color:#3a3125; padding:0;font-family:"Myriad Pro", "Lucida Grande", sans-serif; font-weight:normal; letter-spacing:-1px; line-height:0.8em; z-index:1000; }
-h2.slogan span { display:block; margin: .7em 0 0; font-size:0.55em; color:#97012c; letter-spacing:normal; line-height: 1.1;}
-div.boite-recherche { z-index:1000; position:absolute; top:150px; left:240px; width:390px; height:90px; background: url(../img/recherche-background.gif) no-repeat 0 5px;}
+h2.slogan span { display:block; margin:.7em 0 0; font-size:0.55em; color:#97012c; letter-spacing:normal; line-height:1.1;}
+div.boite-recherche { z-index:1000; position:absolute; top:150px; left:240px; width:390px; height:90px; background:url(../img/recherche-background.gif) no-repeat 0 5px;}
 div.boite-recherche input { position:absolute; top:26px; left:10px; width:300px; height:16px; margin-top:10px; background:none; font-size:1.3em; border:none;}
 div.boite-recherche button { position:absolute; top:22px; right:17px; width:45px; height:45px; background:url(../img/recherche-button.gif) no-repeat 0 0; color:#97012c; border:none;}
 div.boite-recherche button:hover { background:url(../img/recherche-button-over.gif) no-repeat 0 0; cursor:pointer;}
-div.boite-recherche h3 { font-size:2em; font-weight:normal; letter-spacing:-1px; margin: 0;}
-div.boite-recherche h3 span { font-size:.6em; font-weight:normal; letter-spacing: normal;}
-div.boite-recherche p { position:absolute; bottom:13px; left: 0; color:#3a3125; margin: 0; }
+div.boite-recherche h3 { font-size:2em; font-weight:normal; letter-spacing:-1px; margin:0;}
+div.boite-recherche h3 span { font-size:.6em; font-weight:normal; letter-spacing:normal;}
+div.boite-recherche p { position:absolute; bottom:13px; left:0; color:#3a3125; margin:0; }
 div.boite-recherche p a { color:#3a3125;}
 div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 
-#col-menu { clear:right; float:right; width:190px; margin:30px 20px 0px 0px; background: url(../img/col-droite-background.png) repeat-x top center; font-size:1.2em; line-height:1.2; }
+#col-menu { clear:right; float:right; width:190px; margin:30px 20px 0px 0px; background:url(../img/col-droite-background.png) repeat-x top center; font-size:1.2em; line-height:1.2; }
 #col-menu img.bottom { margin-bottom:-7px; }
-#col-menu h4 { padding: 0 25px; margin-bottom:0.4em; font-size:1.8em; font-weight:normal; letter-spacing:-1px; }
-#col-menu ul li { margin:2px 0; padding:0; }
-#col-menu a { margin:0; padding:0; text-decoration:none; color:black; }
-#col-menu a:hover { cursor:pointer; text-decoration:underline; }
+#col-menu h4 { margin-bottom:0.4em; margin-left:25px; font-size:1.8em; font-weight:normal; letter-spacing:-1px; }
+#col-menu ul { margin:0 10px 0 25px; padding:0 }
+#col-menu li { margin:0; padding:0; }
+#col-menu a { display:block; margin-left:5px; padding:1px 5px; text-decoration:none; color:black; }
+#col-menu li.active a, #col-menu a:hover { background:#d5d5d5; margin-left:0; border-left: 5px solid #666; }
 #col-menu .actif a { color:#97012c; font-weight:bold; }
 
 #contenu { 
-    float:left; position: relative; width:744px; 
+    float:left; position:relative; width:744px; 
     margin:100px 0px 50px 0px; padding:0; 
     background:url(../img/contenu-bkg-middle.png) repeat-y 0 0; 
 }
 
-#tabs { margin-left: 8px; margin-right: 8px; }
+#tabs { margin-left:8px; margin-right:8px; }
 
-#contenu h4 { padding: 0 25px; margin-bottom:0.4em; font-size:2.2em; font-weight:normal; letter-spacing:-1px; width: 450px; }
+#contenu h4 { padding:0 25px; margin-bottom:0.4em; font-size:2.2em; font-weight:normal; letter-spacing:-1px; width:450px; }
 #contenu h4 a { text-decoration:none; color:black; }
 #contenu h4 a:hover { text-decoration:underline; }
-#contenu h5 { padding: 10px 0 0 25px; margin-bottom:0.4em; font-size:1.8em; font-weight:normal; letter-spacing:-1px; }
+#contenu h5 { padding:10px 0 0 25px; margin-bottom:0.4em; font-size:1.8em; font-weight:normal; letter-spacing:-1px; }
 #contenu h5 a { text-decoration:none; color:black; }
 #contenu h5 a:hover { text-decoration:underline; }
 
-#contenu .zone-texte {padding: 0 25px; font-size: 1.2em; min-height: 375px;}
-#contenu .zone-texte ul li {list-style: disc; margin: 0 0 .25em;}
-#contenu .zone-texte ol li {list-style: decimal; margin: 0 0 .25em;}
-#contenu .zone-texte ul ul, #contenu .zone-texte ol ol {margin-top: .25em; margin-bottom: .25em;}
-#contenu .zone-texte h2 {font-size: 1.2em;}
-#contenu .zone-texte h3 {font-size: 1.1em;}
-#contenu .zone-texte blockquote {margin: 0 2em 1em; font-style: italic;}
+#contenu .zone-texte {padding:0 25px; font-size:1.2em; min-height:375px;}
+#contenu .zone-texte ul li {list-style:disc; margin:0 0 .25em;}
+#contenu .zone-texte ol li {list-style:decimal; margin:0 0 .25em;}
+#contenu .zone-texte ul ul, #contenu .zone-texte ol ol {margin-top:.25em; margin-bottom:.25em;}
+#contenu .zone-texte h2 {font-size:1.2em;}
+#contenu .zone-texte h3 {font-size:1.1em;}
+#contenu .zone-texte blockquote {margin:0 2em 1em; font-style:italic;}
 
-#contenu .texte { padding: 0 25px; font-size: 1.2em; }
-#contenu .texte ul li { list-style: disc; margin: 0 0 .25em; }
-#contenu .texte ol li { list-style: decimal; margin: 0 0 .25em; }
-#contenu .texte ul ul, #contenu .description ol ol  { margin-top: .25em; margin-bottom: .25em; }
+#contenu .texte { padding:0 25px; font-size:1.2em; }
+#contenu .texte ul li { list-style:disc; margin:0 0 .25em; }
+#contenu .texte ol li { list-style:decimal; margin:0 0 .25em; }
+#contenu .texte ul ul, #contenu .description ol ol  { margin-top:.25em; margin-bottom:.25em; }
 #contenu .texte a { text-decoration:none; }
 #contenu .texte a:hover { text-decoration:underline; }
-#contenu p.pad { padding: 0 25px; }
+#contenu p.pad { padding:0 25px; }
 
 #contenu img.top, .resultats img.top { height:10px; position:relative; top:-10px; left:0;}
 #contenu img.bottom, .resultats img.bottom{ height:10px; position:relative; bottom:-10px; left:0;}
@@ -147,27 +148,27 @@ div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 #contenu .demi-gauche img.top { height:9px; position:relative; top:-9px;}
 #contenu .demi-gauche img.bottom { height:9px;  position:relative; bottom:-9px;}
 
-.contenu-wrapper { padding: 0 25px; }
+.contenu-wrapper { padding:0 25px; }
 
 ul a { text-decoration:none; }
 ul a:hover { text-decoration:underline; }
 
 ul.liste-de-l-accueil { padding:0 2.5em 0 0;}
 ul.liste-de-l-accueil li { margin:1em 0; padding-top:1.1em; border-top:2px solid #d5d5d5;}
-ul.liste-de-l-accueil img { float: left; margin: 0 1em 5px 0; max-width: 75px;}
+ul.liste-de-l-accueil img { float:left; margin:0 1em 5px 0; max-width:75px;}
 ul.liste-de-l-accueil span { display:block;}
 ul.liste-de-l-accueil .la-date { font-size:1.1em; }
 ul.liste-de-l-accueil a.la-date { color:black; }
-ul.liste-de-l-accueil .le-titre {display: block; font-size:1.2em; font-weight:bold; margin: .25em 0;}
+ul.liste-de-l-accueil .le-titre {display:block; font-size:1.2em; font-weight:bold; margin:.25em 0;}
 ul.liste-de-l-accueil .le-resume {font-size:1.1em;}
 ul.liste-de-l-accueil .le-resume a { display:inline;}
-ul.sous-menu li, ul.actions li { display:inline; padding:0px 0px 0px 10px; font-size: 1.1em; }
+ul.sous-menu li, ul.actions li { display:inline; padding:0px 0px 0px 10px; font-size:1.1em; }
 
-ul.actions { position: absolute; top: 15px; right: 20px; width: 240px; text-align: right }
+ul.actions { position:absolute; top:15px; right:20px; width:240px; text-align:right }
 
 .resultats { width:744px; display:inline; margin:0; padding:0; float:left; margin-top:100px; margin-bottom:50px; margin-left:0; background:url(../img/contenu-bkg-middle.png) repeat-y 0 0;}
 .resultats a:hover{text-decoration:none;}
-.resultatRecherche {  padding: 0 25px 1.5em;}
+.resultatRecherche {  padding:0 25px 1.5em;}
 .resultats .typeDocument { text-transform:uppercase;}
 .resultats .le-titre { font-size:1.2em; font-weight:bold; text-decoration:underline;}
 .resultats .resultatResume { font-size:1.1em; color:#000;}
@@ -182,7 +183,7 @@ ul.actions { position: absolute; top: 15px; right: 20px; width: 240px; text-alig
 .resultatPages span a:hover { text-decoration:none;}
 .resultatPages span a:hover span { text-decoration:none;}
 .resultatPages span a span.lien-texte { color:#97012c; text-decoration:underline; font-weight:bold;}
-.resultatPages span a span.lien-texte span { color:#97012c; text-decoration: none; font-weight: normal;}
+.resultatPages span a span.lien-texte span { color:#97012c; text-decoration:none; font-weight:normal;}
 .resultatPages span a:hover span.lien-texte { text-decoration:none;}
 
 /* Divers */
@@ -192,33 +193,33 @@ ul.actions { position: absolute; top: 15px; right: 20px; width: 240px; text-alig
 
 /* Clearfix */
 
-.clearfix {display: inline-block; }
-.clearfix:after, .container:after { content: "."; display: block; height: 0; clear: both; visibility: hidden;}
-* html .clearfix { height: 1%; }
-.clearfix { display: block; }
+.clearfix {display:inline-block; }
+.clearfix:after, .container:after { content:"."; display:block; height:0; clear:both; visibility:hidden;}
+* html .clearfix { height:1%; }
+.clearfix { display:block; }
 
-#edit-form td { vertical-align: top; }
-#edit-form td:first-child { width: 150px; text-align: left; }
-#edit-form table { width: 100%; }
-#edit-form input, #edit-form textarea { width: 80%; }
-#edit-form textarea { height: 100px; }
-#edit-form p { margin-bottom: 2px; }
-#edit-form tr { border-top: 1px black solid; }
-#edit-form tr:first-child { border-top: none; }
+#edit-form td { vertical-align:top; }
+#edit-form td:first-child { width:150px; text-align:left; }
+#edit-form table { width:100%; }
+#edit-form input, #edit-form textarea { width:80%; }
+#edit-form textarea { height:100px; }
+#edit-form p { margin-bottom:2px; }
+#edit-form tr { border-top:1px black solid; }
+#edit-form tr:first-child { border-top:none; }
 
-.odd { background: #ddd; }
+.odd { background:#ddd; }
 
-#repertoire { border:1px solid #bbb; padding:20px; margin: 10px; width:95% }
+#repertoire { border:1px solid #bbb; padding:20px; margin:10px; width:95% }
 #repertoire th, td { padding:5px }
 
 
-.errorlist { color:red; margin: 0 }
-.errorlist li { list-style: none; }
+.errorlist { color:red; margin:0 }
+.errorlist li { list-style:none; }
 
 .publications_autre {border:1px solid #CCC; background:#FAFAFA; margin:10px; padding:10px; display:none;}
 
-#agenda, #actualites {position: relative;}
-#rss-agenda, #rss-actualites {position: absolute; right: 26px; top: 10px;}
+#agenda, #actualites {position:relative;}
+#rss-agenda, #rss-actualites {position:absolute; right:26px; top:10px;}
 
 .infotip
 {
@@ -234,16 +235,16 @@ float:right;
 }
 #fiche_chercheur
 {
-  font-size: 120%;
+  font-size:120%;
 }
 #fiche_chercheur h5
 {
-  font-size: 150%;
-  border-color: #000000;
-  border-width: 1px 0 0 0;
-  border-style: solid none none none;
-  margin-top: 20px;
-  padding: 10px;
+  font-size:150%;
+  border-color:#000000;
+  border-width:1px 0 0 0;
+  border-style:solid none none none;
+  margin-top:20px;
+  padding:10px;
 }
 
 #fiche_chercheur .label
@@ -266,16 +267,16 @@ color:red;
 }
 
 
-.ressource-retrieve * {margin-top: 1em;}
-.ressource-retrieve .fiche {margin-top: 2em;}
+.ressource-retrieve * {margin-top:1em;}
+.ressource-retrieve .fiche {margin-top:2em;}
 
-.fiche, .original, .provenance {font-size: 80%; margin: 2px 0px;}
-.fiche {margin-top: 6px;}
-.fiche a, .original a, .provenance a{text-decoration: none;}
-.back {position: absolute; top: 20px; right: 20px;}
+.fiche, .original, .provenance {font-size:80%; margin:2px 0px;}
+.fiche {margin-top:6px;}
+.fiche a, .original a, .provenance a{text-decoration:none;}
+.back {position:absolute; top:20px; right:20px;}
 
-.horizontal-radio-buttons ul { margin-left: 0 }
-.horizontal-radio-buttons li { display: inline }
+.horizontal-radio-buttons ul { margin-left:0 }
+.horizontal-radio-buttons li { display:inline }
 
-.delete-row { position: absolute; top: 10px; right: 10px }
-.add-row { float: right; margin-right: 21px }
+.delete-row { position:absolute; top:10px; right:10px }
+.add-row { float:right; margin-right:21px }
