--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -1,4 +1,5 @@
 {% load compress %}
+{% load sep %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
@@ -70,8 +71,7 @@
                 </div>
 
                 <div id="col-menu">
-                    {% load sep_menu %}
-                    {% sep_menu %}
+                    {% sep_menu discipline_active region_active %}
                     <img src="{{ MEDIA_URL }}img/col-droite-background-bottom.png" width="190" height="8" alt="bottom" align="bottom" class="bottom" />
                 </div>
 
