--- a/auf_savoirs_en_partage/templates/accounts/new_password.html
+++ b/auf_savoirs_en_partage/templates/accounts/new_password.html
@@ -1,11 +1,12 @@
 {% extends "container_base.html" %}
+{% load sep %}
 
 {% block contenu %}
 <h4>Demande de changement de mot de passe</h4>
 <div class="contenu-wrapper">
     {% if message %}
         <span class="message">{{message}}</span>
-        <p>Cliquez <a href="{% url chercheurs.views.chercheur_login %}">ici</a> pour accéder à votre <a href="{% url chercheurs.views.chercheur_login %}">espace chercheur.</a> </p>
+        <p>Cliquez <a href="{% sep_url chercheurs.views.chercheur_login %}">ici</a> pour accéder à votre <a href="{% url chercheurs.views.chercheur_login %}">espace chercheur.</a> </p>
     {% endif %}
     <form method="post">
         <fieldset>
