--- a/auf_savoirs_en_partage/templates/savoirs/ressource_resultat.html
+++ b/auf_savoirs_en_partage/templates/savoirs/ressource_resultat.html
@@ -1,14 +1,15 @@
 {% load search %}
+{% load sep %}
 
 <div class="resultatRecherche">
-    <a class="le-titre" href="{% url savoirs.views.ressource_retrieve ressource.id %}">{{ ressource.title|highlight:search_regexp }}</a>
+    <a class="le-titre" href="{% sep_url savoirs.views.ressource_retrieve id=ressource.id %}">{{ ressource.title|highlight:search_regexp }}</a>
     {% if ressource.creator %}
     <div><span class="lbl">Auteur:</span> {{ ressource.creator|highlight:search_regexp }}</div>
     {% endif %}
     {% if ressource.description %}
     <div class="resultatResume"><span class="lbl">Description:</span> {{ ressource.description|excerpt:search_regexp|highlight:search_regexp }}</div>
     {% endif %}
-    <div class="fiche"><span>Fiche: </span><a href="{% url savoirs.views.ressource_retrieve ressource.id %}">{% url savoirs.views.ressource_retrieve ressource.id %}</a></div>
+    <div class="fiche"><span>Fiche: </span><a href="{% sep_url savoirs.views.ressource_retrieve id=ressource.id %}">{% url savoirs.views.ressource_retrieve ressource.id %}</a></div>
     <div class="original"><span>Contenu original: </span><a target="_blank" href="{{ ressource.uri }}">{{ ressource.uri }}</a></div>
     <div class="provenance"><span>Provenance: </span><a target="_blank" href="{{ ressource.getServeurURL }}">{{ ressource.getServeurURL }}</a></div>
 </div>
