--- a/auf_savoirs_en_partage/templates/sites/actions.html
+++ b/auf_savoirs_en_partage/templates/sites/actions.html
@@ -1,1 +1,2 @@
-<li><a href="{% url savoirs.views.sites_auf %}">Sites AUF</a></li>
+{% load sep %}
+<li><a href="{% sep_url savoirs.views.sites_auf %}">Sites AUF</a></li>
