--- a/auf_savoirs_en_partage/templates/savoirs/evenement_actions.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_actions.html
@@ -1,2 +1,3 @@
-<li><a href="{% url savoirs.views.evenement_ajout %}">Soumettre un évènement</a></li>
+{% load sep %}
+<li><a href="{% sep_url savoirs.views.evenement_ajout %}">Soumettre un évènement</a></li>
 {% comment %}<li><a href="{{ caldav_url }}">S'abonner</a></li>{% endcomment %}
