--- a/auf_savoirs_en_partage/templates/savoirs/ressource_retrieve.html
+++ b/auf_savoirs_en_partage/templates/savoirs/ressource_retrieve.html
@@ -1,4 +1,5 @@
 {% extends "container_base.html" %}
+{% load sep %}
 
 {% block contenu %}
 <h4>Ressource</h4>
@@ -45,7 +46,7 @@
     <div><span class="lbl">Régions:</span> {{ regions|join:", " }}</div>
     {% endif %}
 
-    <div class="fiche"><span>Fiche: </span><a href="{% url savoirs.views.ressource_retrieve ressource.id %}">{% url savoirs.views.ressource_retrieve ressource.id %}</a></div>
+    <div class="fiche"><span>Fiche: </span><a href="{% sep_url savoirs.views.ressource_retrieve id=ressource.id %}">{% url savoirs.views.ressource_retrieve ressource.id %}</a></div>
     <div class="original"><span>Contenu original: </span><a target="_blank" href="{{ ressource.uri }}">{{ ressource.uri }}</a></div>
     <div class="provenance"><span>Provenance: </span><a target="_blank" href="{{ ressource.getServeurURL }}">{{ ressource.getServeurURL }}</a></div>
 
